[package]
name = "woke"
version = "0.0.3"
authors = ["Richard Anaya"]
edition = "2021"
description = "A minimalistic waker implementation for executors"
license = "MIT OR Apache-2.0"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
